--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
 
 dependencies:
   pre:
-    - sudo pip --upgrade
+    - sudo pip install --upgrade pip
     - sudo pip install docker-compose
 
 test:
